# docuFetch

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  hash_store.json  main.py  pyproject.toml  requirements.txt  scratch_retrieval.py  server.py
.claude/: CLAUDE.md
.claude/agent-memory/pm-loop/: MEMORY.md  project_docufetch_backend.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/issues-creator/: SKILL.md
.claude/skills/prd-generator/: SKILL.md
backend/: __init__.py
backend/api/: __init__.py  routes.py  server.py
backend/embeddings/: __init__.py  embedder.py  store.py
backend/graph/: __init__.py  graph.py  nodes.py  state.py
backend/ingestion/: __init__.py  chunkers.py  loaders.py  pipeline.py  scanner.py
backend/retrieval/: __init__.py  bm25.py  hybrid.py
backend/tests/: conftest.py
backend/tests/api/: test_endpoints.py
backend/tests/integration/: test_chromadb_store.py  test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_rag_pipeline.py
chroma_db/: chroma.sqlite3
chroma_db_test_tmp/: chroma.sqlite3
docs/backend/: backend_TASKS.md  context.md  features.md  grill_doc_roadmap.md  issues.md  orchestrator_plan.md  prd.md  tasks.md  tests.md
docs/frontend/: backend_TASKS.md  backend_context.md  context.md  features.md  grill_doc_roadmap.md  issues.md  orchestrator-plan.md  pm-loop-context.md  prd.md  tasks.md  tests.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: setup.ts
(+96 files in other folders)
