[project]
name = "docufetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "integration: marks tests that call external APIs (OPENROUTER_API_KEY or ANTHROPIC_API_KEY required)",
]
